代码优化： 1.  修复多处使用的弃用方法Class.newInstance()，替换为getDeclaredConstructor().newInstance() 2.  补充对应新增异常的捕获处理 3.  修复Bean加载时Jar文件资源未正确关闭的问题 4.  修正包名路径替换的正则表达式问题